# ROS_CS880

./: README.md
lab5/: my_map.pgm  my_map.yaml  package.xml  package.xml~  realmap.pgm  realmap.yaml
lab5/scripts/: lab5.py  lab5.py~
lab6/: CMakeLists.txt  package.xml  package.xml~
lab6/scripts/: lab6.py
reed_final/: CMakeLists.txt  out.txt  package.xml  package.xml~
reed_final/bag/: Scan.m  scan.bag  scan2.mat
reed_final/bag/good_run/: 2017-05-08-16-26-30.bag
reed_final/bag/good_run/best/: gmap.pgm  gmap.yaml  map.pgm  map.yaml
reed_final/launch/: frontier.launch  frontier.launch~  frontier_mapping.launch  launch_movebase.launch~  move_base.launch.xml  move_base.launch.xml~  rviz.launch
reed_final/param/: global_costmap_params.yaml
reed_final/pictures/: Frontier.yaml
reed_final/rviz/: frontier.rviz
reed_final/scripts/: Frontier.pgm  frontier.csv  frontier_exploration.py  frontier_exploration2.py  makeMap.py  test.py  test2.py
swistreed_lab4/: CMakeLists.txt  package.xml  package.xml~
swistreed_lab4/scripts/: lab4.py  lab4.py~
